[package]
name = "ascii-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
atty = "0.2.14"
clap = { version = "4.0.15", features = ["derive"] }
image = "0.24.4"
png = "0.17.6"
termion = "1.5.6"
